# mergasort_controller

./: CMakeLists.txt  README.md  jetpack_vars.yml
.github/workflows/: docker-publish.yml
src/: Dockerfile  Makefile  messaging.h  msc.c  msc.h  msc_functions.c  msc_functions.h
test/: Makefile  test_it.c
